# MoE-SD

./: .gitignore  Dockerfile  Makefile  PUBLIC_DATASETS_README.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
adapters/: __init__.py  accept_reject_tracker.py  aces.py  adapmoe_baseline.py  adapmoe_cache_alloc.py  adapmoe_gating.py  adapmoe_prefetch.py  briskmoe_cache.py  dipp.py  draft_prefetch_hook.py  elmm_plugin.py  elp.py  expert_cache.py  fused_moe_hook.py  layer_early_terminator.py  memory_manager.py  metrics_sidecar.py  moe_infinity_baseline.py  moe_infinity_prefetch.py  overflow_controller.py  patch_eagle_dynamic_k.py  pred_cache.py  sacr.py  spec_fused_moe.py  spec_integrator.py  specmoe_engine.py  spmoe_baseline.py  triton_spec_moe.py  vllm_adapmoe_official.py  vllm_adapmoe_official_plugin.py  vllm_elmm_plugin.py  vllm_hooks.py  vllm_moeinf_official.py  vllm_moeinf_official_plugin.py
collectors/: acceptance_collector.py  expert_locality_analyzer.py  expert_trace_hook.py  moe_trace_collector.py
controllers/: __init__.py  fallbacks.py  interface.py  memory_partition_controller.py  phase_aware_governor.py  prefetch_policy.py  static_governor.py
data/: gsm8k_bench.jsonl  humaneval_bench.jsonl
docs/: MILESTONE_1_OVERVIEW.md  OPTIMIZATION_SUMMARY.md  ablation_results.md  acceptance_report.md  architecture_and_modules.md  baseline_bench_20260316.md  benchmark_contract.md  benchmark_cookbook.md  config_protocol.md  config_zoo.md  controller_interface.md  decision_trace_schema.yaml  experiment_decision_board.md  quickstart.md  (+17 more)
(+291 files in other folders)
