[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-moe-sd-scheduler"
version = "0.1.0"
description = "Plugin-style scheduling framework for memory-constrained MoE + speculative decoding on vLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"PyYAML>=6.0",
]

[tool.setuptools]
packages = ["adapters", "controllers", "collectors", "tools"]
