[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briskmoe"
version = "0.1.0"
description = "BriskMoE: Restoring Speculative Speedups for Offloaded MoE Inference on vLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"vllm>=0.8.5",
	"torch>=2.6.0",
	"numpy>=2.0",
]

[project.entry-points."vllm.general_plugins"]
elmm = "adapters.vllm_elmm_plugin:register"

[tool.setuptools]
packages = ["adapters"]
